force-app/main/default/objects/Opportunity/fields/List_Price_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>List_Price_Adjustment__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price Adjustment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>