force-app/main/default/objects/Opportunity/fields/Total_Price_Non_Standard__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_Non_Standard__c</fullName>
    <label>Total Price Non Standard</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Products_Type__c</field>
        <operation>equals</operation>
        <value>On demand Products, Extra for all products, Contract Terms</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>